--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,13 +11,14 @@
 		// Bundler mode
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
+		"emitDeclarationOnly": true,
 		"verbatimModuleSyntax": true,
-		"noEmit": true,
 
 		// Best practices
 		"strict": true,
 		"skipLibCheck": true,
 		"noFallthroughCasesInSwitch": true,
+		"forceConsistentCasingInFileNames": true,
 
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
@@ -27,7 +28,7 @@
 		"paths": {
 			"@/*": ["*"]
 		},
-		"rootDir": "."
+		"composite": true
 	},
-	"include": ["**/*.ts"]
+	"include": ["./**/*.ts"]
 }
